# Tech-Connect

./: README.md  Tech_connect_(interest_description_test).py  pyproject.toml
csv/: CSC 132 Spreadsheet - Sheet1.csv  Interests.csv  clubinterests - Sheet1.csv
src/techconnect/: __init__.py  auth.py  db.py  events.py  home.py  interests.py  profile.py  schema.sql
src/techconnect/static/css/: app.css  auth.css  style.css
src/techconnect/static/js/: auth.js
src/techconnect/templates/: Interests.html  appbase.html  authbase.html  auxbase.html  base.html  home.html
src/techconnect/templates/app/: Interests.html  events.html  home.html  profile.html
src/techconnect/templates/auth/: login.html  register.html
