[project]
name = "techconnect"
version = "1.0.0"
authors = [
  { name="Example Author", email="author@example.com" },
  { name="Example Author", email="author@example.com" },
  { name="Example Author", email="author@example.com" },
]
description = ""
readme = "README.md"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project.urls]
Homepage = "https://github.com/Kmchenry70/Tech-Connect/tree/main"